TestSuite/errors/err0277.pas

begin
  var o: System.Math;
end.